@@ -1,3 +1,8 @@
+2005-08-18  Paolo Bonzini  <bonzini@gnu.org>
+
+	* loop-iv.c (iv_number_of_iterations): Match the patch that was
+	applied to mainline for the previous checkin.
+
 2005-08-17  Paolo Bonzini  <bonzini@gnu.org>
 
 	PR rtl-optimization/21254
